chnages connectio-url in catalog