@@ -1,11 +1,16 @@
 -server
--Xmx1G
--XX:+UseG1GC
--XX:G1HeapRegionSize=32M
+-Xmx8G
+-XX:InitialRAMPercentage=70
+-XX:MaxRAMPercentage=70
+-XX:G1HeapRegionSize=16M
 -XX:+ExplicitGCInvokesConcurrent
--XX:+HeapDumpOnOutOfMemoryError
--XX:+UseGCOverheadLimit
 -XX:+ExitOnOutOfMemoryError
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
 -XX:ReservedCodeCacheSize=256M
+-XX:PerMethodRecompilationCutoff=5000
+-XX:PerBytecodeRecompilationCutoff=5000
 -Djdk.attach.allowAttachSelf=true
--Djdk.nio.maxCachedBufferSize=2000000
+-Djdk.nio.maxCachedBufferSize=1000000
+-Dfile.encoding=UTF-8
+-XX:+EnableDynamicAgentLoading
